<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/__dt_status"
        android:title="@string/__dt_status"/>
    <item android:id="@+id/__dt_settings"
        android:title="@string/__dt_settings"/>
    <item android:id="@+id/__dt_all_activities"
        android:title="@string/__dt_all_activities"/>
    <item android:id="@+id/__dt_sp_viewer"
        android:title="@string/__dt_sp_viewer"/>
    <item android:id="@+id/__dt_leaks"
        android:title="@string/__dt_leaks"/>
    <item android:id="@+id/__dt_blocks"
        android:title="@string/__dt_blocks"/>
    <item android:id="@+id/__dt_network_traffics"
        android:title="@string/__dt_network_traffics"/>
    <item android:id="@+id/__dt_crashes"
        android:title="@string/__dt_crashes"/>
    <item android:id="@+id/__dt_intents"
        android:title="@string/__dt_intents"/>
    <item android:id="@+id/__dt_runnable"
        android:title="@string/__dt_runnable"/>
</menu>