<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:dt="http://schemas.android.com/apk/res-auto">

    <com.exyui.android.debugbottle.components.widgets.DTListItemSwitch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/__dt_network_switcher"
        dt:__dt_smart="true"
        dt:__dt_title="@string/__dt_network_listener"/>

    <View style="@style/__DTList.Divider" />

    <com.exyui.android.debugbottle.components.widgets.DTListItemSwitch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/__dt_strict_switcher"
        dt:__dt_smart="true"
        dt:__dt_title="@string/__dt_strict_mode" />

    <View style="@style/__DTList.Divider" />

    <com.exyui.android.debugbottle.components.widgets.DTListItemSwitch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/__dt_3d_switcher"
        dt:__dt_smart="true"
        dt:__dt_title="@string/__dt_3d_window"/>

    <View style="@style/__DTList.Divider" />

    <com.exyui.android.debugbottle.components.widgets.DTListItemSwitch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/__dt_leak_canary_switcher"
        dt:__dt_smart="true"
        dt:__dt_title="@string/__dt_leak_canary" />

    <View style="@style/__DTList.Divider" />

    <com.exyui.android.debugbottle.components.widgets.DTListItemSwitch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/__dt_frame_switcher"
        dt:__dt_smart="true"
        dt:__dt_title="@string/__dt_frame"/>

    <View style="@style/__DTList.Divider" />

    <com.exyui.android.debugbottle.components.widgets.DTListItemSwitch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/__dt_block_canary_switcher"
        dt:__dt_smart="true"
        dt:__dt_title="@string/__dt_block_canary"/>

    <View style="@style/__DTList.Divider" />

    <com.exyui.android.debugbottle.components.widgets.DTListItemSwitch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/__dt_monkey_black_list"
        dt:__dt_smart="true"
        dt:__dt_title="@string/__dt_monkey_blacklist" />

    <View style="@style/__DTList.Divider" />

</LinearLayout>