<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView style="@style/__DTIntro.Title"
        android:id="@+id/__dt_title"/>

    <LinearLayout
        style="@style/__DTIntro.Content">

        <TextView style="@style/__DTIntro.ContentText.Left"
            android:text="@string/__dt_intro_for_qa"
            android:layout_marginBottom="8dp"/>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp">

            <TableRow>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/__dt_enable_bottle"/>

                <TextView style="@style/__DTIntro.ContentText.Left"
                    android:text="@string/__dt_enable_bottle"/>

            </TableRow>

            <TableRow>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/__dt_enable_block_canary"/>

                <TextView style="@style/__DTIntro.ContentText.Left"
                    android:text="@string/__dt_enable_block_canary"/>

            </TableRow>

            <TableRow>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/__dt_enable_http_sniffer"/>

                <TextView style="@style/__DTIntro.ContentText.Left"
                    android:text="@string/__dt_enable_http_sniffer"/>

            </TableRow>

        </TableLayout>

        <TextView style="@style/__DTIntro.ContentText.Left"
            android:text="@string/__dt_intro_for_dev"
            android:layout_marginBottom="8dp"/>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp">

            <TableRow>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/__dt_enable_strict_mode"/>

                <TextView style="@style/__DTIntro.ContentText.Left"
                    android:text="@string/__dt_enable_strict_mode"/>

            </TableRow>

            <TableRow>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/__dt_enable_leak_canary"/>

                <TextView style="@style/__DTIntro.ContentText.Left"
                    android:text="@string/__dt_enable_leak_canary"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</RelativeLayout>