<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:dt="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/__dt_show_list"
            style="@style/__DTList.Item">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/__dt_activities_in_monkey_black_list"
                style="@style/__DTList.Header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/__dt_review_activityies_list"/>

        </LinearLayout>

        <View style="@style/__DTList.Divider" />

        <com.exyui.android.debugbottle.components.widgets.DTListItemSwitch
            android:id="@+id/__dt_testing_enable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            dt:__dt_title="@string/__dt_test_controller"
            dt:__dt_content="@string/__dt_test_controller_enable"/>

        <View style="@style/__DTList.Divider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#666666"
            android:textSize="12sp"
            android:padding="8dp"
            android:text="@string/__dt_root_required"/>

    </LinearLayout>

</ScrollView>
